--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     </style>
     <header>
-        <a href="http://127.0.0.1:5500/Aula%205/PaginaCurso/index1.html"><img src="imagens/logoPronatec3.png" alt="Pronatec" id="logo"></a>
+        <a href="https://aletreus.github.io/PaginaCursoHenrique/"><img src="imagens/logoPronatec3.png" alt="Pronatec" id="logo"></a>
         <h2>Curso Técnico de Desenvolvimento de Sistemas</h2>
     </header>
 </head>
@@ -215,3 +215,4 @@
     </footer>
 </body>
 </html>
+
