--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             padding: 0 20px;
             border-top: 5px solid white;
             justify-content: center;
-            background-color: rgb(243, 252, 116);
+            background-color: rgb(0, 162, 255);
         }
 
         #protagonista{
@@ -72,6 +72,8 @@
             height: auto;
             margin: auto;
             margin-bottom: 50px;
+            border-radius: 20px;
+            box-shadow: 3px 3px 3px black;
         }
 
         #linguagens{
@@ -98,6 +100,7 @@
             margin: auto;
             align-items: center;
             display: flex;
+            margin-top: 40px;
         }
 
         #main1{
@@ -178,11 +181,11 @@
             <img src="imagens/css-3.svg" alt="CSS" id="icones">
         </a>
     </div>
-    <img src="imagens/comendo.jpeg" alt="Comendo" style="display: block; margin: 0 auto;">
+    <img src="imagens/comendo.jpeg" alt="Comendo" style="display: block; margin: 0 auto; box-shadow: 3px 3px 3px black; border-radius: 20px;">
     <div id="main">
         <div id="main1">
             <h1 style="font-size: 30px;">
-            <a href="https://aletreus.github.io/paginaCursosHenrique/">Disciplinas</a>:
+            <a href="http://127.0.0.1:5500/Aula%205/PaginaCurso/cursos.html">Disciplinas</a>:
         </h1>
         <h1 id="subtt">
             1° Semestre
@@ -222,4 +225,3 @@
     </footer>
 </body>
 </html>
-
