--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             padding-bottom: 20px;
             background-color: rgb(243, 243, 106);
             border-radius: 5px;
+            box-shadow: 5px 5px 5px yellow;
         }
 
         #triofoda{
@@ -126,6 +127,8 @@
             margin: auto;
             align-items: center;
             display: flex;
+            margin-bottom: 40px;
+            margin-top: 40px;
         }
 
         #alunos1{
@@ -138,6 +141,7 @@
             text-align: center;
             background-color: rgb(243, 243, 106);
             border-radius: 5px;
+            box-shadow: 5px 5px 5px yellow;
         }
 
         #text{
@@ -225,3 +229,4 @@
     </footer>
 </body>
 </html>
+
