--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div id="main">
         <div id="main1">
             <h1 style="font-size: 30px;">
-            <a href="http://127.0.0.1:5500/Aula%205/PaginaCurso/cursos.html">Disciplinas</a>:
+            <a href="https://aletreus.github.io/paginaCursosHenrique/">Disciplinas</a>:
         </h1>
         <h1 id="subtt">
             1° Semestre
@@ -229,4 +229,5 @@
     </footer>
 </body>
 </html>
+
 
